--- a/projects.css
+++ b/projects.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 body{
@@ -92,99 +93,67 @@ nav ul li a{
 .menu-icon:active,.menu-icon i:active,#resume:active,.profile:active{
     transform: scale(0.96);
 }
+
+.container {
+    margin-left: 50px;
+    max-width: 90%;
+}
+.container .contents{
+    margin: 20px;
+}
+
+img{
+    height: 35vh;
+    width: 29vw;
+    border-radius: 15px;
+}
+.contents{
+    padding: 10px;
+    display: flex;
+    color: aliceblue;
+    border: 1px solid blue;
+    border-radius: 15px;
+    background-color: rgba(63, 61, 61, 0.212);
+}
 .text{
-    margin-top: -250px;
-    font-family: "Roboto Condensed", sans-serif;
-    margin-left: 60px;
-    display: flex;
-    color: aliceblue;
+    margin-left: 30px ;
+    margin-top: 12px;
 }
-.prfimg img{
-    margin-top: 50px;
-    height:45vh;
-    width: 25vw;
-    margin-left: 70%;
-}
-h1{
-    color: aliceblue;
-    font-size: 60px;
-    margin-top: -25px;
-}
-h2{
+.text h2{
     color: blue;
-    font-size: 70px;
 }
-h3{
-    font-size: 35px;
+.text h5{
+    text-decoration: underline solid blue;
 }
-.buttons{
-    font-family: "Roboto Condensed", sans-serif;
-    margin-top: 20px;
-    display: flex;
-    gap: 30px;
+.items{
+    margin-left: -15px ;
 }
-#resume{
-    background-color: rgb(17, 23, 36);
-    color: blue;
-    font-size: 22px;
-    padding: 5px;
-    border: 3px solid blue;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    margin-left: 60px;
-    align-items: center;
-}
-#resume i{
-    justify-content: center;
-    font-size: 22px;
-}
-#resume:hover{
-    background-color: blue;
-    color: black;
-}
-.i{
-    display: flex;
-    gap: 15px;
-}
-.profile{
-    padding: 5px;
-    font-size: 20px;
-    background-color: transparent;
-    border: 2px solid ;
-    border-radius: 50%;
-    color: blue;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-}
-.profile:hover{
-    background-color: blue;
-    color: black;
-}
-.about{
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    margin-left: 60px;
-    color: aliceblue;
-}
-.about h3{
-    font-family: "Roboto Condensed", sans-serif;
-    color: blue;
-    font-size: 40px;
-    text-decoration: underline;
-}
-.about p{
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 22px;
-    display: flex;
+.items li{
+    margin: 3px;
 }
 
 /*  */
-
+@media (max-width:962px) {
+    .contents{
+        display: block;
+    }
+    .image{
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    img{
+        height: 40vh;
+        width: 45vw;
+    }
+}
 @media (max-width:770px){
     #navList{
         font-size: 20px;
+    }
+    img{
+        height: 30vh;
+        width: 50vw;
     }
 }
 /*  */
@@ -196,31 +165,6 @@ h3{
 /*  */
 @media (max-width:625px) {
     .name h2{
-        margin-left: 0px;
-    }
-    .prfimg img{
-        margin-top: 50px;
-        height:300px;
-        width: 300px;
-        margin-left: 150px;
-    }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 50px;
-    }
-    .text h2{
-        margin-left: 0px;
-    }
-    .text h3{
-        margin-left: 0px;
-    }
-    #resume{
-        margin-left: 60px;
-    }
-    .about h3{
         margin-left: 0px;
     }
     #darkmode{
@@ -250,168 +194,38 @@ h3{
         transition: all 0.5s;
     }
 }
-/*  */
-@media (max-width:566px){
-    .text h1{
-        margin-top: -30px;
-        font-size: 45px;
-    }
-    .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left: 60px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 60px;
-     }
-}
-/*  */
-@media (max-width:450px)  {
-    .prfimg img{
-        margin-top: 50px;
-        height:300px;
-        width: 250px;
-        margin-left: 60px;
+@media (max-width:550px) {
+    .container {
+        margin-left: 10px;
+        max-width: 100%;
     }
 }
 /*  */
-
-@media (max-width:431px){
-    .name h2{
-        margin-left: 0px;
+@media (max-width:500px) {
+    img{
+        height: 30vh;
+        width: 50vw;
     }
-    .prfimg img{
-        margin-top: 50px;
-        height:200px;
-        width: 200px;
-        margin-left: 130px;
+}
+@media (max-width:431px) {
+    img{
+        height: 20vh;
+        width: 70vw;
     }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 33px;
-    }
-    .text h2{
-        margin-left: 70px;
-        font-size: 50px;
-    }
-    .text h3{
-        margin-left: 90px;
-    }
-    .about h3{
-        margin-left: 100px;
-    }
-    .about p{
-        margin-left: -30px;
-        font-size: 15px;
-     }
-     .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left:125px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 125px;
-     }
-} 
+}
+/*  */
 @media (max-width:376px){
     .name h2{
         margin-left: 0px;
     }
-    .prfimg img{
-        margin-top: 50px;
-        height:200px;
-        width: 200px;
-        margin-left: 100px;
-    }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 30px;
-        margin-left: -10px;
-    }
-    .text h2{
-        margin-left: 25px;
-        font-size: 50px;
-    }
-    .text h3{
-        margin-left: 65px;
-    }
-    .about h3{
-        margin-left: 50px;
-    }
-    .about p{
-        margin-left: -30px;
-        font-size: 15px;
-     }
-     .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left:110px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 110px;
-     }
 } 
 /*  */
-@media (max-width:394px) {
-    .text h1{
-        font-size: 30px;
-    }
-    .about h3{
-        margin-left: 60px;
-    }
-}
 @media (max-width:361px){
     .name h2{
         margin-left: 0px;
     }
-    .prfimg img{
-        margin-top: 50px;
-        height:200px;
-        width: 200px;
-        margin-left: 90px;
+    img{
+        height: 26vh;
+        width: 70vw;
     }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 30px;
-        margin-left: -28px;
-    }
-    .text h2{
-        margin-left: 25px;
-        font-size: 50px;
-    }
-    .text h3{
-        margin-left: 60px;
-    }
-    .about h3{
-        margin-left: 40px;
-    }
-    .about p{
-        margin-left: -30px;
-        font-size: 15px;
-     }
-     .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left:90px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 90px;
-     }
 } 
