--- a/contact.css
+++ b/contact.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 body{
@@ -89,97 +90,76 @@ nav ul li a{
     font-size: 30px;
     transition: transform 0.2s ease;
 }
-.menu-icon:active,.menu-icon i:active,#resume:active,.profile:active{
+.menu-icon:active,.menu-icon i:active{
     transform: scale(0.96);
 }
-.text{
-    margin-top: -250px;
-    font-family: "Roboto Condensed", sans-serif;
-    margin-left: 60px;
-    display: flex;
-    color: aliceblue;
-}
-.prfimg img{
-    margin-top: 50px;
-    height:45vh;
-    width: 25vw;
-    margin-left: 70%;
-}
-h1{
-    color: aliceblue;
-    font-size: 60px;
-    margin-top: -25px;
-}
-h2{
+.head{
+    text-align: center;
     color: blue;
-    font-size: 70px;
-}
-h3{
-    font-size: 35px;
-}
-.buttons{
-    font-family: "Roboto Condensed", sans-serif;
-    margin-top: 20px;
-    display: flex;
-    gap: 30px;
-}
-#resume{
-    background-color: rgb(17, 23, 36);
-    color: blue;
-    font-size: 22px;
-    padding: 5px;
-    border: 3px solid blue;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    margin-left: 60px;
-    align-items: center;
-}
-#resume i{
-    justify-content: center;
-    font-size: 22px;
-}
-#resume:hover{
-    background-color: blue;
-    color: black;
-}
-.i{
-    display: flex;
-    gap: 15px;
-}
-.profile{
-    padding: 5px;
-    font-size: 20px;
-    background-color: transparent;
-    border: 2px solid ;
-    border-radius: 50%;
-    color: blue;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-}
-.profile:hover{
-    background-color: blue;
-    color: black;
-}
-.about{
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    margin-left: 60px;
-    color: aliceblue;
-}
-.about h3{
-    font-family: "Roboto Condensed", sans-serif;
-    color: blue;
-    font-size: 40px;
     text-decoration: underline;
 }
-.about p{
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 22px;
-    display: flex;
+.content{
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+}
+form{
+    border: 1px solid blue;
+    padding: 15px;
+    border-radius: 15px;
+}
+input{
+    width: 460px;
+    height: 40px;
+    border-radius: 10px;
+    border: 0.1px solid blue;
+    padding: 10px;
+    color: aliceblue;
+    background-color: rgba(68, 68, 81, 0.382);
+}
+input::placeholder,textarea::placeholder{
+    color: rgba(131, 137, 206, 0.637);
+    font-size: 18px;
+}
+label{
+    color: aliceblue;
+    font-size: 20px;
+}
+textarea{
+    height: 150px;
+    width: 460px;
+    border-radius: 10px;
+    border: 0.1px solid blue;
+    padding: 10px;
+    color: aliceblue;
+    background-color: rgba(68, 68, 81, 0.382);
 }
 
+.sent{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.sent button{
+    border: 0.1px solid blue;
+    color: blue;
+    background-color: transparent;
+    border-radius: 15px;
+    font-size: 20px;
+    padding: 5px;
+    width: 120px;
+    transition: transform 0.2s ease;
+}
+.sent button:hover{
+    background-color: blue;
+    color: aliceblue;
+}
+.sent button:hover i::before{
+    content: '\f178';
+}
+.sent button:active{
+    transform: scale(0.96);
+}
 /*  */
 
 @media (max-width:770px){
@@ -195,32 +175,15 @@ h3{
 }
 /*  */
 @media (max-width:625px) {
+    input{
+        width: 400px;
+        height: 35px;
+    }
+    textarea{
+        width: 400px;
+        height: 100px;
+    }
     .name h2{
-        margin-left: 0px;
-    }
-    .prfimg img{
-        margin-top: 50px;
-        height:300px;
-        width: 300px;
-        margin-left: 150px;
-    }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 50px;
-    }
-    .text h2{
-        margin-left: 0px;
-    }
-    .text h3{
-        margin-left: 0px;
-    }
-    #resume{
-        margin-left: 60px;
-    }
-    .about h3{
         margin-left: 0px;
     }
     #darkmode{
@@ -251,167 +214,61 @@ h3{
     }
 }
 /*  */
-@media (max-width:566px){
-    .text h1{
-        margin-top: -30px;
-        font-size: 45px;
+@media (max-width:500px) {
+    label{
+        font-size: 18px;
     }
-    .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left: 60px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 60px;
-     }
-}
-/*  */
-@media (max-width:450px)  {
-    .prfimg img{
-        margin-top: 50px;
-        height:300px;
-        width: 250px;
-        margin-left: 60px;
+    input{
+        width: 350px;
+        height: 35px;
+    }
+    textarea{
+        width: 350px;
+        height: 100px;
     }
 }
-/*  */
-
 @media (max-width:431px){
+    input{
+        width: 320px;
+        height: 30px;
+    }
+    textarea{
+        width: 320px;
+        height: 100px;
+    }
     .name h2{
         margin-left: 0px;
     }
-    .prfimg img{
-        margin-top: 50px;
-        height:200px;
-        width: 200px;
-        margin-left: 130px;
-    }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 33px;
-    }
-    .text h2{
-        margin-left: 70px;
-        font-size: 50px;
-    }
-    .text h3{
-        margin-left: 90px;
-    }
-    .about h3{
-        margin-left: 100px;
-    }
-    .about p{
-        margin-left: -30px;
-        font-size: 15px;
-     }
-     .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left:125px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 125px;
-     }
 } 
+@media (max-width:401px) {
+    input{
+        width: 300px;
+        height: 30px;
+    }
+    textarea{
+        width: 300px;
+        height: 100px;
+    }
+}
 @media (max-width:376px){
     .name h2{
         margin-left: 0px;
     }
-    .prfimg img{
-        margin-top: 50px;
-        height:200px;
-        width: 200px;
-        margin-left: 100px;
-    }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 30px;
-        margin-left: -10px;
-    }
-    .text h2{
-        margin-left: 25px;
-        font-size: 50px;
-    }
-    .text h3{
-        margin-left: 65px;
-    }
-    .about h3{
-        margin-left: 50px;
-    }
-    .about p{
-        margin-left: -30px;
-        font-size: 15px;
-     }
-     .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left:110px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 110px;
-     }
 } 
-/*  */
-@media (max-width:394px) {
-    .text h1{
-        font-size: 30px;
-    }
-    .about h3{
-        margin-left: 60px;
-    }
-}
 @media (max-width:361px){
+    input{
+        width: 280px;
+        height: 30px;
+    }
+    textarea{
+        width: 280px;
+        height: 100px;
+    }
+    .sent button{
+        font-size: 18px;
+        padding: 5px;
+    }
     .name h2{
         margin-left: 0px;
     }
-    .prfimg img{
-        margin-top: 50px;
-        height:200px;
-        width: 200px;
-        margin-left: 90px;
-    }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 30px;
-        margin-left: -28px;
-    }
-    .text h2{
-        margin-left: 25px;
-        font-size: 50px;
-    }
-    .text h3{
-        margin-left: 60px;
-    }
-    .about h3{
-        margin-left: 40px;
-    }
-    .about p{
-        margin-left: -30px;
-        font-size: 15px;
-     }
-     .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left:90px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 90px;
-     }
 } 
